apps/hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello

  template:
    metadata:
      labels:
        app: hello

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - containerPort: 80
